<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="1"
        android:title="@string/String_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contacto"
        android:orderInCategory="2"
        android:title="@string/contato_c_mara_municipal_da_amadora"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contacto2"
        android:orderInCategory="3"
        android:title="@string/contatos_novageo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contacto3"
        android:orderInCategory="3"
        android:title="Escola Secundaria Matias Aires"
        app:showAsAction="never" />
</menu>